# 26worldcup_predictor

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
api/: index.py
data/: sample_matches.csv  wc2026_results.csv  wc2026_schedule.json  world_cup_matches.csv
data/cache/: WC_matches.csv  WC_matches.json  WC_meta.json  WC_standings.json  WC_teams.json  WC_upcoming.json
models/: wc_predictor.joblib
public/: analysis.html  bankroll.html  index.html
public/static/: analysis.js  bankroll.js  flags.js  home.js  i18n.js  style.css
scripts/: predict_match.py  run_server.py  sync_data.py  train_model.py  update_schedule.py  verify_june29.py  warm_cache.py
src/: __init__.py  config.py  pipeline.py
src/api/: main.py
src/data/: cache_store.py  football_data.py  odds_api.py  service.py  wc2026_loader.py  wc_training_data.py  world_cup.py
src/features/: advanced.py  builder.py  form.py  h2h.py  history_index.py  home_away.py  odds_features.py  standings.py  world_cup.py
src/model/: bankroll.py  knockout_calibrate.py  predict.py  train.py
static/: analysis.html  analysis.js  bankroll.html  bankroll.js  home.js  i18n.js  index.html  style.css
