[project]
name = "26worldcup-predictor"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "scikit-learn>=1.4.0",
  "pandas>=2.1.0",
  "numpy>=1.26.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "joblib>=1.3.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
]

[tool.vercel]
entrypoint = "api/index.py"

[tool.vercel.scripts]
build = "python scripts/train_model.py"
